force-app/main/default/objects/custom_create247__c/custom_create247__c.object-meta.xml
<CustomObject>
    <label>Custom created object247</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects247</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>