force-app/main/default/objects/custom_create247__c/fields/custom_create_247field533__c.field-meta.xml
<CustomField>
    <fullName>custom_create_247field533__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 247field533</label>
    <type>Checkbox</type>
</CustomField>